<resources>
    <string name="app_name">inMotion</string>

    <!-- Login and Register views -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="register_new_account"><u>Register new account</u></string>
    <string name="login_to_existing_account"><u>Login to existing account</u></string>
    <string name="register">REGISTER</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment…</string>
    <string name="friends_requests">FRIENDS / REQUESTS</string>
    <string name="friends">FRIENDS</string>
    <string name="requests">REQUESTS</string>
    <string name="add_comment_button">Add comment</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="accept_friend_request_button">Accept friend request</string>
    <string name="reject_friend_request_button">Reject friend request</string>
    <string name="bio">BIO</string>
    <string name="nickname_hint">Nickname</string>
    <string name="nickname">Nickname:</string>
    <string name="logout">Logout</string>
    <string name="change_password_button">Change password button</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="add_as_friend">add as friend</string>
    <string name="hint_bio">Bio</string>
    <string name="save">SAVE</string>
    <string name="old_password">Old password</string>
    <string name="email_label">Email:</string>
    <string name="nickname_label">Nickname:</string>
    <string name="password_label">Password:</string>
    <string name="asterix_password">********</string>
    <string name="flip_camera_view">flip camera view</string>
    <string name="start_recording">start recording</string>
    <string name="no_posts">It seems like no one is in motion today ☹️</string>
    <string name="remove_friend">remove friend</string>
    <string name="add_daily_video">ADD DAILY VIDEO</string>
</resources>