<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.user.UserDetailsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/userDetailsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/close_32">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_no_background"
                android:contentDescription="@string/edit_profile_button"
                android:drawableEnd="@drawable/edit_32" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDetailsToolbar" />

        <VideoView
            android:id="@+id/ivAvatarVideo"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDetailsToolbar" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerColor="@color/background"
            app:layout_constraintTop_toBottomOf="@id/ivAvatarVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerVideo"
            tools:text="Nickname" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFriends"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/friends_requests"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNickname" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:dividerColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFriends" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBioHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bio"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerBio" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBioHeading"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id malesuada mauris. Duis vestibulum lobortis lacinia. Vivamus a tempor lectus, in vehicula magna. Vestibulum accumsan est a elementum ullamcorper." />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="#ff7961"
            android:text="@string/logout"
            android:textColor="#ba000d"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvBio" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
